fix: Wrap all Markdown images in scrollable container (#8479)

--- a/resources/scss/src/component/Markdown.scss
+++ b/resources/scss/src/component/Markdown.scss
@@ -167,4 +167,14 @@
             font-weight: bold;
         }
     }
+
+    .neo-markdown-image-wrapper {
+        overflow-x: auto;
+        text-align: center;
+        width     : 100%;
+
+        img {
+            max-width: initial;
+        }
+    }
 }
